<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>AuxProtect</groupId>
    <artifactId>AuxProtect</artifactId>
    <version>1.2.5-pre17</version>
    <name>AuxProtect</name>
    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>${basedir}</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>lang/*</include>
                    <include>config.yml</include>
                    <include>bungee.yml</include>
                </includes>
            </resource>
        </resources>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>16</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>replace-version</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <target>
                                <replace token="%VERSION%" value="${project.version}" dir="target/classes/">
                                    <include name="**plugin.yml"/>
                                    <include name="**bungee.yml"/>
                                </replace>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>impl-jar</id>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <delete dir="${testserver}/Test1/plugins" failonerror="false"
                                        includes="${project.artifactId}-*.jar"/>
                                <copy todir="${testserver}/Test1/plugins">
                                    <fileset dir="${basedir}/target"
                                             includes="${project.artifactId}-${project.version}.jar"/>
                                </copy>
                                <delete dir="${testserver}/Test2/plugins" failonerror="false"
                                        includes="${project.artifactId}-*.jar"/>
                                <copy todir="${testserver}/Test2/plugins">
                                    <fileset dir="${basedir}/target"
                                             includes="${project.artifactId}-${project.version}.jar"/>
                                </copy>
                                <delete dir="${testserver}/Proxy/plugins" failonerror="false"
                                        includes="${project.artifactId}-*.jar"/>
                                <copy todir="${testserver}/Proxy/plugins">
                                    <fileset dir="${basedir}/target"
                                             includes="${project.artifactId}-${project.version}.jar"/>
                                </copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <!--        Spigot-->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <!--        Bungee-->
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>

        <!--        ChestShop-->
        <repository>
            <id>chestshop-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>

        <!--        JitPack-->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <!--        CoreProtect-->
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>

        <!--        Essentials-->
        <repository>
            <id>essentials-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>

        <!--		Towny-->
        <repository>
            <id>glaremasters repo</id>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>

        <!--		ProtocolLib-->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <type>javadoc</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.36.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.acrobot.chestshop</groupId>
            <artifactId>chestshop</artifactId>
            <version>3.12</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>21.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.brcdev-minecraft</groupId>
            <artifactId>shopgui-api</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.Gypopo</groupId>
            <artifactId>EconomyShopGUI-API</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.7sat</groupId>
            <artifactId>SSDynamicShop</artifactId>
            <version>f99e33d4e4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Zrips</groupId>
            <artifactId>Jobs</artifactId>
            <version>4.17.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.19.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>towny</artifactId>
            <version>0.98.2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Heliosares</groupId>
            <artifactId>AuctionHouseAPI</artifactId>
            <version>756e099dff</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.0.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <properties>
        <jars>${env.USERPROFILE}/eclipse-workspace/jars</jars>
        <testserver>${env.USERPROFILE}/Documents/TestServer</testserver>
        <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
    </properties>
</project>